tdp-config-catalog-cce/helm/rollout-demo/canary-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-stable
spec:
  selector:
    app: demo
  ports:
  - port: 80

apiVersion: v1
kind: Service
metadata:
  name: demo-canary
spec:
  selector:
    app: demo
  ports:
  - port: 80
