tdp-config-catalog-cce/helm/rollout-demo/canary-gateway/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: rollout-demo
spec:
  parentRefs:
  - name: demo-gateway

  rules:
  - backendRefs:
    - name: demo-stable
      port: 80
